--- a/index.html
+++ b/index.html
@@ -4,10 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="myscript.js" defer></script>
 </head>
 <body>
-    <div class="card_1">
-        <h1></h1>
-    </div>
+    <div class="container">
+        <div class="card large">
+                <div class="top">
+                    <div class="icon">
+                        <h3>400 x 400</h3>
+                    </div>
+                    <div class="writing">
+                        <h1>Title-1</h1>
+                        <h2>Subheading</h2>
+                        <p>Integer eleifend et est eget finibus. Aliquam augue magna, facilisis id ultricies id, consequat id nisl. Praesent maximus semper justo, non fringilla lorem tristique vel.</p>
+                    </div>
+                </div>
+                <div class="img_container">
+                    <img src="images/github_icon.png" alt="Github Icon">
+                    <img src="images/instagram_logo.png" alt="Instagram Logo">
+                    <img src="images/internet_icon.png" alt="Internet Icon">
+                </div> 
+            </div>
+            <div class="card small">
+                <div class="top">
+                    <div class="icon">
+                        <h3>400 x 400</h3>
+                    </div>
+                    <div class="writing">
+                        <h1>Title 2</h1>
+                        <h2>Subheading</h2>
+                        <p>Integer eleifend et est eget finibus. Aliquam augue magna, facilisis id ultricies id, consequat id nisl. Praesent maximus semper justo, non fringilla lorem tristique vel.</p>
+                    </div>
+                </div>
+                <div class="img_container">
+                    <img src="images/github_icon.png" alt="Github Icon">
+                    <img src="images/instagram_logo.png" alt="Instagram Logo">
+                    <img src="images/internet_icon.png" alt="Internet Icon">
+                </div>
+            </div>
+            <div class="card small">
+                    <div class="top">
+                        <div class="icon">
+                            <h3>400 x 400</h3>
+                        </div>
+                        <div class="writing">
+                            <h1>Title 3</h1>
+                            <h2>Subheading</h2>
+                            <p>Integer eleifend et est eget finibus. Aliquam augue magna, facilisis id ultricies id, consequat id nisl. Praesent maximus semper justo, non fringilla lorem tristique vel.</p>
+                        </div>
+                    </div>
+                    <div class="img_container">
+                        <img src="images/github_icon.png" alt="Github Icon">
+                        <img src="images/instagram_logo.png" alt="Instagram Logo">
+                        <img src="images/internet_icon.png" alt="Internet Icon">
+                    </div>
+            </div>
+            <div class="card small">
+                <div class="top">
+                    <div class="icon">
+                        <h3>400 x 400</h3>
+                    </div>
+                    <div class="writing">
+                        <h1>Title 4</h1>
+                        <h2>Subheading</h2>
+                        <p>Integer eleifend et est eget finibus. Aliquam augue magna, facilisis id ultricies id, consequat id nisl. Praesent maximus semper justo, non fringilla lorem tristique vel.</p>
+                    </div>
+                </div>
+                <div class="img_container">
+                    <img src="images/github_icon.png" alt="Github Icon">
+                    <img src="images/instagram_logo.png" alt="Instagram Logo">
+                    <img src="images/internet_icon.png" alt="Internet Icon">
+                </div>
+            </div>
+        </div>
+        </div>
+        
 </body>
 </html>
